code/python/TDD/stderr.txt
  File "functional_tests.py", line 6
    asert 'Django' in browser.title
                 ^
SyntaxError: invalid syntax
